--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,13 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+<form method="post" action="users">
+    <select name="userId">
+        <option value="1">Пользователь 1</option>
+        <option value="2">Пользователь 2</option>
+    </select>
+    <button type="submit">Установить</button>
+</form>
 <ul>
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
